<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/azar_numerico"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/registerUserTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/userNameRegister"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/confirmRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registerUserConfirm" />

</LinearLayout>