<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="683dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/azar_numerico"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/singlePlayerButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:text="@string/single_player"
        android:textAllCaps="true"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <Button
        android:id="@+id/multiPlayerButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="339dp"
        android:text="@string/multiplayer"
        android:textAllCaps="true"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayerButton" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="56dp"
        android:text="@string/coinsTable"
        android:textAllCaps="true"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/multiPlayerButton" />

    <Button
        android:id="@+id/usersButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="200dp"
        android:text="@string/users"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/scoreButton" />

    <Button
        android:id="@+id/configButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:text="@string/configuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usersButton"
        app:layout_constraintTop_toBottomOf="@+id/scoreButton" />

    <Button
        android:id="@+id/rebuyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="20dp"
        android:text="@string/repurchase"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/usersButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/rebuyButton"
        app:layout_constraintTop_toTopOf="@id/usersButton" />

    <TextView
        android:id="@+id/userView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="32dp"
        android:text="@string/actualUser"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/singlePlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/moneyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="22dp"
        android:text="@string/actualCoins"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/singlePlayerButton"
        app:layout_constraintEnd_toEndOf="@id/appTitle"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@+id/userView"
        app:layout_constraintTop_toTopOf="@id/appTitle"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="22dp"
        android:text="@string/logInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintStart_toEndOf="@+id/rebuyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>