<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/azar_numerico"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/bet"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/userName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/coinsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/actualCoins"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/totalBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coinsView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/totalBet"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/betView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coinsView"
        android:layout_marginStart="55dp"
        android:layout_marginTop="76dp"
        android:text="0"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="109dp"
        android:layout_height="110dp"
        android:layout_below="@id/subtitle"
        android:layout_marginStart="125dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/randomNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/randomNumber"
            android:textSize="80sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/subtitle"
        android:layout_marginStart="265dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/betClock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/clock"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/bet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coinsView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="175dp"
        android:text="0"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginStart="105dp"
        android:layout_marginTop="28dp"
        android:text="0"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bet3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginStart="190dp"
        android:layout_marginTop="28dp"
        android:text="0"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bet4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginStart="270dp"
        android:layout_marginTop="180dp"
        android:text="0"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="75dp"
        android:layout_height="229dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/betRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_25"
            android:textAlignment="center"
            android:textSize="55sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/allinButton1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/all_in"
            android:textSize="13sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/bet10Button1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/_10"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="229dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/betRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_26_50"
            android:textAlignment="center"
            android:textSize="55sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/allinButton2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/all_in"
            android:textSize="13sp" />

        <Button
            android:id="@+id/bet10Button2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/_10"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="229dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/betRange3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_51_75"
            android:textAlignment="center"
            android:textSize="55sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/allinButton3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/all_in"
            android:textSize="13sp" />

        <Button
            android:id="@+id/bet10Button3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/_10"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="229dp"
        android:layout_marginStart="255dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/betRange4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_76_99"
            android:textAlignment="center"
            android:textSize="55sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/allinButton4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/all_in"
            android:textSize="13sp" />

        <Button
            android:id="@+id/bet10Button4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/_10"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:text="@string/start" />

</RelativeLayout>
